syntax = "proto3";

package profile;

service ProfileService {
  rpc Create(CreateRequest) returns (ResData);
  rpc UpdateName(UpdateNameRequest) returns (ResData);
  rpc UpdateBirthday(UpdateBirthdayRequest) returns (ResData);
  rpc UpdateEmail(UpdateEmailRequest) returns (ResData);
  rpc Logaout(ByEmail) returns (Null);
  rpc FindOne(ByEmail) returns (ResData);
}

message ByEmail {
  string email = 1;
}

message CreateRequest {
    string email = 1;
}

message UpdateNameRequest {
  string email = 1;
  string name = 2;
}

message UpdateBirthdayRequest {
  string email = 1;
  string birthday = 2; 
}

message UpdateEmailRequest {
  string email = 1;
  string phone = 2;
}

message ProfileResponse {
  string name = 2;
  string phone = 3;
  string birthday = 4;
  string email = 5;
  string bonuse = 6;
}

message Meta {
    int32 statusCode = 1;
    string message = 2;
}

message ResData {
    Meta meta = 1;
    ProfileResponse data = 2;
}

message Null {}